@@ -30,7 +30,8 @@
 
 int run_test ()
 {
-  Problem pb = Problem (F ());
+  F f;
+  Problem pb = Problem (f);
 
   // Set the starting point.
   Function::vector_t start (pb.function.n);
